@@ -1,3 +1,6 @@
+   5 October 2016
+Fixed error that made sim$(abbcd.abcd) equal to 10/9 instead of 8/9
+
   23 September 2016
 json.c: fixed reading strings with characters with 8th bit set. 
 
